# rills

./: .pre-commit-config.yaml  ARCHITECTURE.md  README.md  play.py  pyproject.toml
rills/: __init__.py  formatting.py  game.py  llm.py  main.py  phases.py  player.py  protocols.py  roles.py  types.py
rills/events/: __init__.py  base.py  bodyguard.py  drunk.py  ghost.py  gun_nut.py  insomniac.py  jester.py  lovers.py  priest.py  sleepwalker.py  suicidal.py  zombie.py
rills/models/: __init__.py  actions.py  conversation.py  information.py  knowledge.py  player_state.py  voting.py
rills/phases/: __init__.py  day.py  night.py  utils.py
rills/services/: __init__.py  context_service.py  conversation_service.py  effect_service.py  information_service.py  player_state_service.py  prompt_templates.py  vote_service.py
tests/: __init__.py  conftest.py  test_events.py  test_game.py  test_integration.py  test_models.py  test_player.py  test_roles.py  test_services.py
